Add progress on import/export and grid export

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -70,6 +70,10 @@ div.under-navbar {
     flex-grow: 1;
 }
 
+.progress-bar-fast {
+    transition: width .1s linear;
+}
+
 .rotate {
     animation: rotation 1s infinite linear;
 }
