--- a/src/style/vars.scss
+++ b/src/style/vars.scss
@@ -1,7 +1,24 @@
 @import "bootstrap/scss/functions";
-@import "bootstrap/scss/variables";
 
-//$danger: #e74c3c;
+
+$gray-100: #f8f9fa;
+$gray-200: #e9ecef;
+$gray-300: #dee2e6;
+$gray-400: #ced4da;
+$gray-500: #adb5bd;
+$gray-600: #6c757d;
+$gray-700: #495057;
+$gray-800: #343a40;
+$gray-900: #212529;
+
+$border-color: $gray-800;// Why here? because scss var assignment is not retroactive
+$body-bg: $gray-900;
+$body-color: $gray-300;
+$input-color: $gray-200;
+$btn-close-color: $gray-100;
+
+
+@import "bootstrap/scss/variables";
 
 $table-bg-scale: +50%;
 
@@ -21,3 +38,12 @@ $list-group-bg: shift-color($dark, +0%);
 $list-group-border-color: rgba($white, .125);
 $list-group-item-bg-scale: +50%;
 $list-group-item-color-scale: -20%;
+
+
+$modal-content-color: white;
+$modal-content-bg: $dark;
+$modal-content-border-color: $black;
+$input-placeholder-color: $gray-500;
+
+$form-file-button-bg: $gray-900;
+$form-file-button-hover-bg: shade-color($form-file-button-bg, 20%);
