--- a/src/style/bootstrap_custom.scss
+++ b/src/style/bootstrap_custom.scss
@@ -9,6 +9,8 @@
 // Configuration
 @import "./vars.scss";
 
+
+@import "bootstrap/scss/maps";
 @import "bootstrap/scss/mixins";
 @import "bootstrap/scss/utilities";
 
